--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,11 @@
 HOST=localhost
 PORT=3080
 
-MONGO_URI=mongodb://127.0.0.1:27017/LibreChat
+MONGO_URI=mongodb+srv://v4nagar:lrCDdjQPtwz9RePP@cluster0.2rsw3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 DOMAIN_CLIENT=http://localhost:3080
 DOMAIN_SERVER=http://localhost:3080
+
 
 NO_INDEX=true
 
